[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-embedding-fix"
version = "0.1.0"
description = "Post-hoc corrections for degenerate clinical text embeddings in RAG pipelines"
readme = "README.md"
license = {text = "CC-BY-4.0"}
requires-python = ">=3.8"
authors = [
    {name = "Yngve Mikkelsen", email = "yngve.mikkelsen@sbs.ox.ac.uk"},
]
keywords = [
    "embeddings",
    "clinical NLP",
    "retrieval-augmented generation",
    "whitening",
    "anisotropy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/yngvemikkelsen/clinical-embedding-fix"
Paper = "https://github.com/yngvemikkelsen/clinical-embedding-layer-analysis"
